# django-6

./: .env.sample  Dockerfile  django  docker-compose.yaml  pyproject.toml  requirements.txt
blog/: forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
client/: admin.py  forms.py  models.py  urls.py  views.py
client/migrations/: 0001_initial.py  0002_client_owner.py  0003_alter_client_comment_alter_client_email_and_more.py
client/templates/client/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
config/: settings.py  urls.py
fixtures/: blog_data.json  client_data.json  groups_data.json  mailing_data.json  users_data.json
messenger/: admin.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
messenger/migrations/: 0001_initial.py  0002_mailing_last_send_time.py  0003_alter_mailing_message.py  0004_alter_mailing_periodicity.py  0005_alter_mailing_status.py  0006_mailing_next_send_time.py  0007_rename_clients_mailing_client.py  0008_alter_mailing_options.py  0009_mailing_owner_message_owner.py  0010_alter_attempt_attempt_time_alter_attempt_created_at_and_more.py
pg_data/global/: 1260  pg_control  pg_internal.init
pg_data/pg_stat/: pgstat.stat
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/: login.html  password_recovery.html  user_form.html  user_update.html
utils/: email_service.py
(+19 files in other folders)
